# LazyBar

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
libs/osqrlib/: CMakeLists.txt
libs/osqrlib/include/: osqrlib.hpp
libs/osqrlib/src/: appleqrlib.cpp  linqrlib.cpp
libs/winqrlib/: CMakeLists.txt  winqrlib.cpp
src/: main.cpp
